# pypoker-eval

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  README.md  _pokereval_2_4.la  _pokereval_2_4_la-pypokereval.lo  _pokereval_2_6.la  _pokereval_2_6_la-pypokereval.lo  aclocal.m4  bug-1823.py  config.status  configure  libtool  pokereval.py  pypoker-eval.pc  pypokereval.c  pypokereval.pyx  setup.py  setup_win.py  test.py  test2.py
.deps/: _pokereval_2_4_la-pypokereval.Plo  _pokereval_2_6_la-pypokereval.Plo
.libs/: _pokereval_2_4.la  _pokereval_2_4.lai  _pokereval_2_4.so.1  _pokereval_2_4.so.1.0.0  _pokereval_2_6.la  _pokereval_2_6.lai  _pokereval_2_6.so.1
config/: ccpython.m4  python.m4
